# disserta-bench

./: .gitignore  README.md  main.py  pyproject.toml  sample.env
scripts/: dataset_schema.py  download_fuvest.py  extraction_pipeline.py  llm.py  ocr.py  run_pipeline.py
scripts/pipeline/: answer_extractor.py  models.py  page_classifier.py  question_extractor.py  signatures.py
tests/: test_download_fuvest.py  test_extraction_pipeline.py
